モジュール名変更

--- a/template.yaml
+++ b/template.yaml
@@ -12,10 +12,10 @@ Globals:
     MemorySize: 512
 
 Resources:
-  HelloWorldFunction:
+  ShowYourGear:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: HelloWorldFunction
+      CodeUri: ShowYourGear
       Handler: helloworld.App::handleRequest
       Runtime: java17
       Architectures:
@@ -51,9 +51,9 @@ Outputs:
   HelloWorldApi:
     Description: API Gateway endpoint URL for Prod stage for Hello World function
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
+  ShowYourGear:
     Description: Hello World Lambda Function ARN
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
+    Value: !GetAtt ShowYourGear.Arn
+  ShowYourGearIamRole:
     Description: Implicit IAM Role created for Hello World function
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+    Value: !GetAtt ShowYourGearRole.Arn
