--- a/template.yaml
+++ b/template.yaml
@@ -16,7 +16,7 @@ Resources:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       CodeUri: ShowYourGear
-      Handler: helloworld.App::handleRequest
+      Handler: showyourgear.App::handleRequest
       Runtime: java17
       Architectures:
       - x86_64
