--- a/samconfig.toml
+++ b/samconfig.toml
@@ -4,7 +4,7 @@ version = 0.1
 
 [default]
 [default.global.parameters]
-stack_name = "showyourgear"
+stack_name = "getphotos"
 
 [default.build.parameters]
 cached = true
