--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,13 @@ services:
     image: localstack/localstack:0.14.4
     ports:
       - 4566-4583:4566-4583
+    networks:
+      default:
+        aliases: # これを追加
+          - s3.localhost.localstack.cloud
+          - s3-website.localhost.localstack.cloud
+          - localbucket.s3.localhost.localstack.cloud
+          - localbucket.s3-website.localhost.localstack.cloud
     environment:
       - AWS_ACCESS_KEY=dummy
       - AWS_SECRET_KEY=dummy
