--- a/samconfig.toml
+++ b/samconfig.toml
@@ -21,7 +21,7 @@ s3_prefix = "showyourgear"
 region = "ap-northeast-1"
 disable_rollback = true
 image_repositories = []
-parameter_overrides = "ResourcePrefix=\"showyourgear\" EnvironmentName=\"dev\""
+parameter_overrides = "ResourcePrefix=\"showyourgear\" EnvironmentName=\"dev\" ApiAllowOrigin=\"*\""
 
 [default.package.parameters]
 resolve_s3 = true
@@ -34,3 +34,14 @@ warm_containers = "EAGER"
 
 [default.local_start_lambda.parameters]
 warm_containers = "EAGER"
+
+[y.deploy.parameters]
+stack_name = "showyourgear"
+resolve_s3 = true
+s3_prefix = "showyourgear"
+region = "ap-northeast-1"
+confirm_changeset = true
+capabilities = "CAPABILITY_IAM"
+disable_rollback = true
+parameter_overrides = "ResourcePrefix=\"showyourgear\" EnvironmentName=\"dev\" ApiAllowOrigin=\"*\""
+image_repositories = []
