--- a/template.yaml
+++ b/template.yaml
@@ -128,7 +128,7 @@ Resources:
       Cors:
         AllowOrigin: !Sub "'${ApiAllowOrigin}'"
         AllowHeaders: "'Content-Type, X-Amz-Date, Authorization, X-Api-Key, X-Amz-Security-Token'"
-        AllowMethods: "'POST, OPTIONS'"
+        AllowMethods: "'POST'"
 
   ApplicationResourceGroup:
     Type: AWS::ResourceGroups::Group
