--- a/samconfig.toml
+++ b/samconfig.toml
@@ -21,7 +21,7 @@ s3_prefix = "showyourgear"
 region = "ap-northeast-1"
 disable_rollback = true
 image_repositories = []
-parameter_overrides = "ResourcePrefix=\"showyourgear\" EnvironmentName=\"dev\" ApiAllowOrigin=\"*\""
+parameter_overrides = "ResourcePrefix=\"showyourgear\" EnvironmentName=\"dev\" ApiAllowOrigin=\"*\" AwsAccessKey=\"SHOWYOURGEAR_ACCESS_KEY_DEV\""
 
 [default.package.parameters]
 resolve_s3 = true
@@ -44,4 +44,15 @@ confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 disable_rollback = true
 parameter_overrides = "ResourcePrefix=\"showyourgear\" EnvironmentName=\"dev\" ApiAllowOrigin=\"*\""
+image_repositories = []
+
+[t.deploy.parameters]
+stack_name = "showyourgear"
+resolve_s3 = true
+s3_prefix = "showyourgear"
+region = "ap-northeast-1"
+confirm_changeset = true
+capabilities = "CAPABILITY_IAM"
+disable_rollback = true
+parameter_overrides = "ResourcePrefix=\"showyourgear\" EnvironmentName=\"dev\" ApiAllowOrigin=\"*\" AwsAccessKey=\"SHOWYOURGEAR_ACCESS_KEY_DEV\""
 image_repositories = []
