環境変数設定追加

--- a/template.yaml
+++ b/template.yaml
@@ -27,6 +27,7 @@ Globals:
         API_ALLOW_ORIGIN: !If [IsProduction, "HOGEHOGEHOGEHOGEHOGEGEEEE", "http://localhost:5173"]
         S3_ACCESS_KEY: '{{resolve:secretsmanager:showyourgear:SecretString:s3AccessKey}}'
         S3_SECRET_KEY: '{{resolve:secretsmanager:showyourgear:SecretString:s3SecretKey}}'
+        S3_BUCKET_NAME: !Ref ImageS3Bucket
 
 Resources:
   # 写真取得API
